# gitlab-cargo-shim

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: audit.yml  ci.yml  docker-publish.yml  test.yml
src/: cache.rs  config.rs  main.rs  metadata.rs  util.rs
src/command/: bust_cache.rs  mod.rs
src/git_command_handlers/: fetch.rs  ls_refs.rs
src/http_server/: mod.rs
src/http_server/endpoints/: dl.rs  mod.rs
src/http_server/layer/: logging.rs
src/protocol/: codec.rs  high_level.rs  low_level.rs  mod.rs  packet_line.rs
src/providers/: gitlab.rs  mod.rs
src/providers/gitlab/: checksums.rs
test/: config.toml  create_pat.py
test/example-bin/: Cargo.toml  README
test/example-bin/.cargo/: config.toml
test/example-bin/src/: main.rs
test/example-lib/: Cargo.toml  README
