[package]
name = "gitlab-cargo-shim"
version = "0.1.0"
edition = "2021"
authors = [
    "Jordan Doyle <jordan@doyl.ee>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrayvec = "0.7"
async-trait = "0.1"
axum = "0.5"
bytes = "1.1"
cargo_metadata = "0.14"
cargo-platform = "0.1"
clap = { version = "3.1", features = ["derive", "cargo"] }
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
itoa = "1.0"
indexmap = "1.8"
indoc = "1.0"
once_cell = "1.12"
parse_link_header = "0.3"
parking_lot = "0.12"
percent-encoding = "2.1"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
shlex = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thrussh = "0.33"
thrussh-keys = "0.21"
time = "0.3"
tokio = { version = "1.17", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.5"
tower-layer = "0.3"
tower-service = "0.3"
url = { version = "2.2", features = ["serde"] }
ustr = "0.8"
uuid = { version = "1.1", features = ["v4"] }
