[package]
name = "gitlab-cargo-shim"
version = "0.1.4"
edition = "2021"
authors = [
    "Jordan Doyle <jordan@doyl.ee>"
]

[dependencies]
anyhow = "1"
arrayvec = "0.7"
async-trait = "0.1"
bytes = "1.1"
cargo_metadata = "0.15"
cargo-platform = "0.1"
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
futures = "0.3"
hex = "0.4"
itoa = "1.0"
indexmap = "2"
indoc = "2.0"
packfile = "0.1"
parse_link_header = "0.3"
parking_lot = "0.12"
percent-encoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
shlex = "1.1"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thrussh = "0.34"
thrussh-keys = "0.22"
thrussh-libsodium = "=0.2.1" # 0.2.2 causes dynamic linking by enabling use-pkg-config
tokio = { version = "1.17", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.5"
url = { version = "2.2", features = ["serde"] }
urlencoding = "2.1"
ustr = "0.10"
uuid = { version = "1.1", features = ["v4"] }
zstd = "0.13"

[profile.release]
lto = "thin"
strip = true
